--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@apollo/client": "^3.6.9",
+    "apollo-server-micro": "^3.10.2",
+    "graphql": "^16.6.0",
+    "micro": "^9.4.1",
+    "next": "^12.2.6-canary.5",
+    "react": "0.0.0-experimental-796d31809-20220812",
+    "react-dom": "0.0.0-experimental-796d31809-20220812"
   },
   "devDependencies": {
     "@types/node": "18.7.6",
