--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "apollo-server-micro": "^3.10.2",
     "graphql": "^16.6.0",
     "micro": "^9.4.1",
-    "next": "^12.2.6-canary.5",
+    "next": "12.2.6-canary.9",
     "react": "0.0.0-experimental-796d31809-20220812",
     "react-dom": "0.0.0-experimental-796d31809-20220812"
   },
@@ -22,7 +22,7 @@
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
+    "eslint-config-next": "12.2.6-canary.9",
     "typescript": "4.7.4"
   }
 }
